--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/SicurezzaProgetto4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.json-20171018.jar=D:\\Laurea Magistrale\\Sicurezza Informatica\\Progetto 2\\json-20171018.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-20171018.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
