--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/SicurezzaProgetto4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.json-20171018.jar=D:\\Laurea Magistrale\\Sicurezza Informatica\\Progetto 2\\json-20171018.jar
+file.reference.json-20171018.jar-1=C:\\Users\\Daniele\\Documents\\NetBeansProjects\\SicurezzaProgetto3\\json-20171018.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20171018.jar}
+    ${file.reference.json-20171018.jar}:\
+    ${file.reference.json-20171018.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sicurezzaprogetto4.SicurezzaProgetto4
+main.class=sicurezzaprogetto4.test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
